# sdl2uipy

./: CMakeLists.txt
src/: events.cpp  events.h  hello.cpp  hello.h  image.cpp  image.h  python_bind.cpp  python_bind.h  video_system.cpp  video_system.h
vs2012/: sdl2uipy.sln
